[gd_scene load_steps=10 format=3 uid="uid://c3lbssvbmhnoq"]

[ext_resource type="Script" path="res://UI/mani_menu.gd" id="1_18tcr"]
[ext_resource type="FontFile" uid="uid://bvyfe3evfgrx7" path="res://UI/Zorque.otf" id="1_ioblw"]
[ext_resource type="FontFile" uid="uid://b2ep5yjvefset" path="res://UI/astro.ttf" id="2_hvg13"]
[ext_resource type="Texture2D" uid="uid://dxao2n6ngqt24" path="res://UI/Space Background.png" id="3_vrod1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lar2w"]
texture = ExtResource("3_vrod1")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7k5pn"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_color = Color(0.0117647, 0.0117647, 0.0117647, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k45p5"]
bg_color = Color(0.470076, 0.470076, 0.470076, 1)
border_width_left = 5
border_width_top = 5
border_color = Color(0.0117647, 0.0117647, 0.0117647, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uid2x"]
bg_color = Color(0.281187, 0.281187, 0.281187, 1)
border_width_left = 5
border_width_top = 5
border_color = Color(0.0117647, 0.0117647, 0.0117647, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yw10y"]

[node name="ManiMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_18tcr")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_lar2w")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -212.0
offset_top = -46.0
offset_right = 213.0
offset_bottom = 249.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ioblw")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_7k5pn")
theme_override_styles/hover = SubResource("StyleBoxFlat_k45p5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uid2x")
theme_override_styles/focus = SubResource("StyleBoxEmpty_yw10y")
text = "START"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ioblw")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_7k5pn")
theme_override_styles/hover = SubResource("StyleBoxFlat_k45p5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uid2x")
theme_override_styles/focus = SubResource("StyleBoxEmpty_yw10y")
text = "OPTIONS"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ioblw")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_7k5pn")
theme_override_styles/hover = SubResource("StyleBoxFlat_k45p5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uid2x")
theme_override_styles/focus = SubResource("StyleBoxEmpty_yw10y")
text = "EXIT
"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -273.0
offset_right = 175.0
offset_bottom = -143.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("2_hvg13")
theme_override_font_sizes/font_size = 40
text = "Dark Matter: Rebel Horizons"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
